--- a/D3TOP/tratamento de dados.ipynb
+++ b/D3TOP/tratamento de dados.ipynb
@@ -133,7 +133,7 @@
    "outputs": [],
    "source": [
     "# Carregando os dados\n",
-    "animes = pd.read_excel(\"Base_animes_tratados.xlsx\")"
+    "animes = pd.read_excel(\"Nase_animes_tratados.xlsx\")"
    ]
   },
   {
@@ -194,17 +194,6 @@
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "\n",
-    "animes.drop_duplicates(inplace=True)\n",
-    "aval.drop_duplicates(inplace=True)\n",
-    "\n",
-    "# Tratando valores faltantes\n",
-    "animes.fillna(\"\", inplace=True)\n",
-    "aval.fillna(\"\", inplace=True)\n",
-    "\n",
-    "# Instanciando o stemmer and the lemmatizer\n",
-    "stemmer = PorterStemmer()\n",
-    "lemmatizer = WordNetLemmatizer()\n",
-    "\n",
     "# Baixe as stopwords em português (se ainda não tiver baixado)\n",
     "nltk.download('stopwords')\n",
     "\n",
@@ -222,69 +211,7 @@
     "stemmer = RSLPStemmer()\n",
     "\n",
     "# Crie uma instância do lematizador para o português\n",
-    "nlp = spacy.load('en_core_web_sm')#spacy.load('pt_core_news_sm')\n",
-    "# Function to remove HTML tags\n",
-    "def remove_html(text):\n",
-    "    soup = BeautifulSoup(text, \"html.parser\")\n",
-    "    return soup.get_text()\n",
-    "\n",
-    "# Function to remove URLs\n",
-    "def remove_urls(text):\n",
-    "    url_pattern = re.compile(r'https?://\\S+|www\\.\\S+')\n",
-    "    return url_pattern.sub(r'', text)\n",
-    "\n",
-    "# Function to remove emojis\n",
-    "def remove_emojis(text):\n",
-    "    emoji_pattern = re.compile(\"[\"\n",
-    "                           u\"\\U0001F600-\\U0001F64F\"  # emoticons\n",
-    "                           u\"\\U0001F300-\\U0001F5FF\"  # symbols & pictographs\n",
-    "                           u\"\\U0001F680-\\U0001F6FF\"  # transport & map symbols\n",
-    "                           u\"\\U0001F1E0-\\U0001F1FF\"  # flags (iOS)\n",
-    "                           u\"\\U00002702-\\U000027B0\"\n",
-    "                           u\"\\U000024C2-\\U0001F251\"\n",
-    "                           \"]+\", flags=re.UNICODE)\n",
-    "    return emoji_pattern.sub(r'', text)\n",
-    "\n",
-    "# Function to preprocess the text\n",
-    "def preprocess(text):\n",
-    "    try:\n",
-    "        # Removing HTML tags\n",
-    "        text = remove_html(text)\n",
-    "    except:\n",
-    "        pass\n",
-    "        # Removing URLs\n",
-    "    try:\n",
-    "        text = remove_urls(text)\n",
-    "    except:\n",
-    "        pass\n",
-    "        # Removing emojis\n",
-    "    try:\n",
-    "        text = remove_emojis(text)\n",
-    "    except:\n",
-    "        pass\n",
-    "        # Converting to lowercase\n",
-    "    try:\n",
-    "        text = text.lower()\n",
-    "    except:\n",
-    "        pass\n",
-    "        # Removing special characters\n",
-    "    try:\n",
-    "        text = re.sub(r'\\W', ' ', text)\n",
-    "    except:\n",
-    "        pass\n",
-    "        # Removing extra spaces\n",
-    "    try:\n",
-    "        text = re.sub(r'\\s+', ' ', text, flags=re.I)\n",
-    "    except:\n",
-    "        pass\n",
-    "        # Removing stopwords, applying lemmatization and then stemming\n",
-    "    try:\n",
-    "        #text = ' '.join([stemmer.stem(lemmatizer.lemmatize(word)) for word in text.split() if word not in remover_palavras])\n",
-    "        text = ' '.join([stemmer.stem(token.lemma_) for token in nlp(text) if token.lemma_ not in remover_palavras])\n",
-    "    except:\n",
-    "        pass\n",
-    "    \n",
-    "    return text"
+    "nlp = spacy.load('en_core_web_sm')#spacy.load('pt_core_news_sm')"
    ]
   },
   {
@@ -502,120 +429,6 @@
    "outputs": [],
    "source": [
     "np.save(\"vector\", similarity_matrix)   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "animes[animes[\"name\"] == \"Wolf Children\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "similar_animes = get_top_similar_animes(34, similarity_matrix, top_k=5)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genero = animes.loc[34, \"genres\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genero"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_auxiliar = animes[animes[\"workId\"].isin(similar_animes)]\n",
-    "base_auxiliar[\"ordem\"] = pd.Categorical(base_auxiliar[\"workId\"], categories=similar_animes, ordered=True)\n",
-    "base_auxiliar = base_auxiliar.sort_values(\"ordem\").reset_index()\n",
-    "base_auxiliar.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate Fuzzy Ratio for each row\n",
-    "base_auxiliar['fuzzy_ratio'] = base_auxiliar['genres'].apply(lambda x: fuzz.ratio(x, genero))\n",
-    "\n",
-    "\n",
-    "\n",
-    "def classifica(row):\n",
-    "    if row['fuzzy_ratio'] > 0.8:\n",
-    "        return 4\n",
-    "    elif row['fuzzy_ratio'] > 0.6:\n",
-    "        return 3\n",
-    "    elif row['fuzzy_ratio'] > 0.4:\n",
-    "        return 2\n",
-    "    elif row['fuzzy_ratio'] > 0.2:\n",
-    "        return 1\n",
-    "    elif row['fuzzy_ratio'] > 0:\n",
-    "        return 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_auxiliar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_auxiliar['fuzzy_category'] = base_auxiliar.apply(lambda row: classifica(row) ,axis = 1)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_auxiliar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sort by Fuzzy Ratio categories, then by original order\n",
-    "base_auxiliar.sort_values('fuzzy_category', ascending=False, kind='mergesort', inplace=True)\n",
-    "\n",
-    "# You can drop the helper columns if not needed\n",
-    "base_auxiliar.drop(['fuzzy_ratio', 'fuzzy_category'], axis=1, inplace=True)\n",
-    "base_auxiliar.reset_index(inplace = True , drop = True)"
    ]
   }
  ],
