--- a/Reconhecimento de face/modelos_finais.ipynb
+++ b/Reconhecimento de face/modelos_finais.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "31c0a1c2-515e-4f19-a75e-bae897b782b2",
    "metadata": {},
@@ -38,7 +37,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "833d312f-4da5-42eb-a362-36d82e43154a",
    "metadata": {},
@@ -82,7 +80,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "389faf89-82a5-4fe9-b7b7-fc719c2eecf3",
    "metadata": {},
@@ -91,7 +88,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "46441e98-b587-4726-a65f-d71a052e51d7",
    "metadata": {},
@@ -100,7 +96,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7c1b3f65-bc0e-4852-9327-2dc5c09c37a7",
    "metadata": {},
@@ -135,7 +130,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9a422910-0da2-4f7a-947e-f7a5a3cf3f39",
    "metadata": {
@@ -146,7 +140,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6ead7a85-b566-4638-95dc-ba5c04d39658",
    "metadata": {},
@@ -238,7 +231,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "03ba0161-167b-43c7-870d-212a3b467a6c",
    "metadata": {},
@@ -304,7 +296,13 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "12d370cb-7f53-4e6f-8c8e-4db53756b832",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -569,7 +567,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8d0ee726-075a-421a-8035-806a161d1106",
    "metadata": {},
@@ -580,7 +577,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6446b043-0f67-48c6-a195-1a1952251f73",
    "metadata": {
@@ -1767,7 +1763,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3abfc057-9e1e-4e4b-9351-9f32cfe5bca5",
    "metadata": {
@@ -2046,7 +2041,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5073a7f3-3063-434e-abdb-215c8a33e36f",
    "metadata": {
@@ -2377,7 +2371,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "331dc526-d387-457d-b349-db36f426fe9e",
    "metadata": {},
@@ -2459,7 +2452,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c2bdbd82-1060-444f-81df-e0b968f4aec0",
    "metadata": {},
@@ -2472,6 +2464,10 @@
    "execution_count": 22,
    "id": "cb8d5ad5-b3ed-4dc8-b061-abbc121cb364",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -2717,7 +2713,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5fda9b98-4fc6-4457-ad7e-9b62b2eec8f0",
    "metadata": {},
@@ -2730,6 +2725,10 @@
    "execution_count": 23,
    "id": "a7f764d7-e8d6-48ca-af5a-6ecf396db0e0",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -2912,7 +2911,6 @@
    "source": []
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3f098299-f6c1-415f-9447-c6d187f3662d",
    "metadata": {},
@@ -2925,7 +2923,9 @@
    "execution_count": 24,
    "id": "f9a603d9-1160-42d1-9bfa-585b74c413a6",
    "metadata": {
+    "collapsed": true,
     "jupyter": {
+     "outputs_hidden": true,
      "source_hidden": true
     },
     "tags": []
@@ -3190,7 +3190,6 @@
    "source": []
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "83364a9b-b9ce-452a-b2bb-ada0c0922d57",
    "metadata": {},
@@ -8670,7 +8669,6 @@
    "source": []
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "dbd9707c-986e-4300-a810-beb81ccdb419",
    "metadata": {},
@@ -8679,7 +8677,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f8698844-267c-4625-a3b3-07d0867fceb1",
    "metadata": {},
